[package]
name = "snmp-parser"
version = "0.10.0"
description = "Parser for the SNMP protocol"
license = "MIT/Apache-2.0"
keywords = ["SNMP","protocol","parser","nom"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/rusticata/snmp-parser"
repository = "https://github.com/rusticata/snmp-parser.git"
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
asn1-rs = "0.7"
nom = "7.1"
rusticata-macros = "4.0"
thiserror = "1.0"

[dev-dependencies]
hex-literal = "0.4"
pretty_assertions = "1.0"
